# site-jyunci01

./: README.md  pyproject.toml  server.py
config/: content.htm  content_backup.htm  sitetitle
content/: 1a缺考名單.html  About.html  Brython.html  HW.html  W10.html  W12.html  W6.html  cp2022.html  hw 第一練習.html  hw第二個練習.html  hw練習.html  index.html  sitemap.html  tipuesearch_content.js  w11.html  w13.html  w14.html  w15.html  w5.html  亂數產生器.html  心得.html  抽點程式(五個學生).html  方塊行走程式.html  溫度轉換程式.html  練習一.html  練習二-1.html  練習二-2.html  練習二.html  繪畫方格.html  額取個人網頁.html
